--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 
-<body style="margin:0; overflow:hidden;">
+<body style="margin:0; overflow:scroll;">
   <a-scene embedded arjs>
     
     <!-- Marker -->
@@ -20,3 +20,4 @@
   </a-scene>
 </body>
 </html>
+
