--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 
-<body style="margin:0; overflow:scroll;">
+<body style="margin:0; overflow:hidden;">
   <a-scene embedded arjs>
     
     <!-- Marker -->
     <a-marker preset="hiro">
       
       <!-- 3D Object -->
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
+      <a-torus
+        color="#4CC3D9"
+        radius="1"
+        radius-tubular="0.2"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
+        position="0 1 -3"
+      ></a-torus>
 
     </a-marker>
 
@@ -20,4 +26,5 @@
   </a-scene>
 </body>
 </html>
+
 
