--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
         position="0 1 -3"
       ></a-torus>
+      <a-sky color="#ECECEC"></a-sky>
 
     </a-marker>
 
@@ -26,5 +27,6 @@
   </a-scene>
 </body>
 </html>
+
 
 
