--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         color="#4CC3D9"
         radius="1"
         radius-tubular="0.2"
+        rotation="0 30 0"
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
         position="0 1 -3"
       ></a-torus>
-      <a-sky color="#ECECEC"></a-sky>
+      
 
     </a-marker>
 
@@ -27,6 +28,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
