--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <a-marker preset="hiro">
       
       <!-- 3D Object -->
-      <a-torus
-        color="#4CC3D9"
-        radius="1"
-        radius-tubular="0.2"
-        rotation="0 30 0"
+      <a-cylinder
+        color="crimson"
+        radius-top="1"
+        radius-bottom="0"
+        height="2"
         animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
         position="0 1 -3"
-      ></a-torus>
+      ></a-cylinder>
       
 
     </a-marker>
@@ -28,6 +28,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
