--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         radius-top="1"
         radius-bottom="0"
         height="2"
-        animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
-        position="0 1 -3"
+        position="0 1 0"
+        shadow
       ></a-cylinder>
       
 
@@ -28,6 +28,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
