--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       
       <!-- 3D Object -->
       <a-cylinder
-        color="crimson"
-        radius-top="1"
+        color="dodgerblue"
+        radius-top="0.5"
         radius-bottom="0"
         height="2"
         position="0 1 0"
@@ -28,6 +28,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
